--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -30,6 +30,5 @@ services:
         tags: ['controller.service_arguments']
 
     # add more services, or override services that need manual wiring
-    # AppBundle\Service\ExampleService:
-    #     arguments:
-    #         $someArgument: 'some_value'
+    SecretBundle\Service\CreateUserService:
+        arguments: [%kernel.root_dir%, '@session']
